plugins {
    id 'java'
}

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.9.8'

    compile 'org.jsoup:jsoup:1.10.2'


    testCompile group: 'junit', name: 'junit', version: '4.12'
}
